# going

./: .gitignore  Dockerfile  README.md  build-all.sh  go.mod  main.go
.github/workflows/: test.yml
go/: main.go
go-detour/: bridge.c  bridge.h  go.mod  libgo-detour.h  main.go
go-target/: go.mod  main.go
hooks/: Cargo.toml  build.rs  hooks.h
hooks/src/: go_detour_ffi.rs  lib.rs
