[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1"
frida-gum = "0.8"
#frida-gum = { version = "0.8", features = ["auto-download"] }
lazy_static = "1.4"
#tokio = { version = "1", features = ["full"] }

[lib]
crate_type = ["cdylib"]
