[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1"
frida-gum = { git = "https://github.com/t4lz/frida-rust", branch = "linux-arm", features = ["auto-download"] }
lazy_static = "1.4"

[build-dependencies]
bindgen = "0.61.0"

[lib]
crate_type = ["cdylib"]
